--- a/my website/Aiden Website.html
+++ b/my website/Aiden Website.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="flex justify-center items-center w-full md:w-1/2 px-4 mt-4 md:mt-0">
-                <img class="w-2/5 rounded-md" src="/Images/IMG1.jpg" alt="header image">
+                <img class="w-2/5 rounded-md" src="/my website/Images/IMG1.jpg" alt="header image">
             </div>
         </div>
 
