added service section

--- a/my website/Aiden Website.html
+++ b/my website/Aiden Website.html
@@ -52,15 +52,41 @@
                 <img class="w-2/5 rounded-md" src="/my website/Images/IMG1.jpg" alt="header image">
             </div>
         </div>
+        <section id="Product">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-10">
+            <!--card 1-->
+            <div class="flex flex-col items-center gap-6 px-6 py-5 bg-orange-500 rounded-3xl shadow-main hover:bg-black transitin duration-300">
+                <div class="flex flex-col gap-3 text-center px-6">
+                    <h4 class="text-3xl font-extrabold text-dark-grey-900">Web Design</h4>
+                    <p class="font-bold text-dark-grey-700">Web design involves crafting the visual and functional components of a website. This process includes a range of skills such as graphic design, UI design, UX design, and coding. The aim is to develop a website that is visually attractive, easy to navigate, and successful in meeting its goals, whether to share information, sell products, or engage visitors. By combining these elements, web design ensures a smooth user experience that boosts engagement and user satisfaction.</p>
+                </div>
+            </div>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 mt-10 justify-items-center">
+            <!--card 2-->
+
+            <div class="flex flex-col items-center gap-6 px-6 py-5 bg-orange-500 rounded-3xl shadow-main hover:bg-black transitin duration-300">
+                <div class="flex flex-col gap-3 text-center px-6">
+                    <h4 class="text-3xl font-extrabold text-dark-grey-900">Web Development </h4>
+                    <p class="font-bold text-dark-gray-700">Web development refers to the process of building and maintaining websites. It involves various disciplines, including front-end development, back-end development, and database management. The goal is to create functional, dynamic, and responsive websites that meet user needs and business objectives. Web development ensures that a website operates smoothly, efficiently, and securely, providing users with an optimal experience. By integrating coding, scripting, and network configuration, web development brings your website to life and keeps it running seamlessly.</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col items-center gap-6 px-6 py-5 bg-orange-500 rounded-3xl shadow-main hover:bg-black transitin duration-300">
+                <div class="flex flex-col gap-3 text-center px-6">
+                    <h4 class="text-3xl font-extrabold text-dark-grey-900">Debugging</h4>
+                    <p class="font-bold text-dark-grey-700">Debugging is the process of identifying, analyzing, and resolving errors or bugs in software code. It involves using various tools and techniques to detect issues, understand their causes, and implement solutions. The goal of debugging is to ensure that the software runs smoothly, efficiently, and without errors. Effective debugging improves the stability and performance of applications, enhances user experience, and reduces downtime. By meticulously addressing and fixing issues, debugging plays a critical role in software development and maintenance.</p>
+                </div>
+        </div>
+        </section>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 mt-20 justify-items-center">
             <div class="bg-orange-600 rounded-md p-4">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Contact Number</h2>
                 <p class="text-base leading-7 text-dark-grey-600">Reach out to me by phone</p>
                 <p class="text-lg font-bold text-black" href="tel:+067-208-9491">+067-208-9491</p>
             </div>
 
-            <div class="bg-orange-600 rounded-md p-4">
+            <div class="bg-orange-600 rounded-md p-4 justify-center">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Email</h2>
                 <p class="text-base leading-7 text-dark-grey-600">Contact me at</p>
                 <p class="text-lg font-bold text-black" href="mailto:aidenwilliams336@gmail.com">aidenwilliams336@gmail.com</p>
