--- a/my website/Aiden Website.html
+++ b/my website/Aiden Website.html
@@ -26,9 +26,9 @@
     <link rel="stylesheet" href="./assets/css/theme.css">
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
-<body class="bg-gray-500 bg-cover bg-center bg-no-repeat bg-fixed h-screen">
+<body class="bg-gray-900 bg-cover bg-center bg-no-repeat bg-fixed h-screen">
     <div class="container mx-auto flex flex-col text-white px-4">
-        <nav class="flex flex-col  md:flex-row gap-5 justify-between pb-5 bg-orange-600 mt-0 pt-3 px-4">
+        <nav class="flex flex-col items-center md:flex-row gap-5 justify-between pb-5 bg-orange-600 mt-0 pt-3 px-4">
             <a class="text-2xl font-normal hover:text-black" href="#about">About</a>
             <a class="text-2xl font-normal hover:text-black" href="#Services">Services</a>
             <a class="text-2xl font-normal hover:text-black" href="#Projects">Projects</a>
@@ -79,20 +79,20 @@
         </div>
         </section>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 mt-20 justify-items-center">
-            <div class="bg-orange-600 rounded-md p-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 mb-10 mt-20 justify-between w-full">
+            <div class="bg-orange-500 rounded-md p-4">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Contact Number</h2>
                 <p class="text-base leading-7 text-dark-grey-600">Reach out to me by phone</p>
                 <p class="text-lg font-bold text-black" href="tel:+067-208-9491">+067-208-9491</p>
             </div>
 
-            <div class="bg-orange-600 rounded-md p-4 justify-center">
+            <div class="bg-orange-500 rounded-md p-4 justify-center">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Email</h2>
                 <p class="text-base leading-7 text-dark-grey-600">Contact me at</p>
                 <p class="text-lg font-bold text-black" href="mailto:aidenwilliams336@gmail.com">aidenwilliams336@gmail.com</p>
             </div>
 
-            <div class="bg-orange-600 rounded-md p-4">
+            <div class="bg-orange-500 rounded-md p-4">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Address</h2>
                 <p class="text-base leading-7 text-dark-grey-600">Find me at</p>
                 <p class="text-lg font-bold text-black">1234 Elm Street, Hometown, Country</p>
