--- a/my website/Aiden Website.html
+++ b/my website/Aiden Website.html
@@ -28,13 +28,16 @@
 </head>
 <body class="bg-gray-900 bg-cover bg-center bg-no-repeat bg-fixed h-screen">
     <div class="container mx-auto flex flex-col text-white px-4">
-        <nav class="flex flex-col items-center md:flex-row gap-5 justify-between pb-5 bg-orange-600 mt-0 pt-3 px-4">
+        <nav class="flex flex-col items-center md:flex-row gap-5 justify-evenly pb-5 bg-gradient-to-r from-orange-900 via-orange-600 to-orange-300 mt-0 pt-3 px-4">
+            <div>
+                <img  class="md:w-1/4 lg:w-1/3" src="/my website/Images/nav.png">
+            </div>
             <a class="text-2xl font-normal hover:text-black" href="#about">About</a>
             <a class="text-2xl font-normal hover:text-black" href="#Services">Services</a>
             <a class="text-2xl font-normal hover:text-black" href="#Projects">Projects</a>
             <a class="text-2xl font-normal hover:text-black" href="#contact">Contact</a>
         </nav>
-
+        <section id="about">
         <div class="flex flex-col md:flex-row w-full flex-wrap mt-10">
             <div class="flex flex-col justify-center text-center md:text-left w-full md:w-1/2 px-4">
                 <h1 class="text-4xl font-extrabold leading-tight mb-4">
@@ -47,12 +50,14 @@
                     Hi, my name is Aiden Williams, a Junior Software Developer passionate about the industry’s dynamic skill set. I love learning and growing in this ever-evolving field. Outside of work, I stay active with sports, especially soccer, and enjoy the excitement of forex trading. Balancing my technical skills with my interests in fitness and trading helps me approach challenges creatively. I'm always eager to expand my horizons and take on new opportunities.
                 </p>
             </div>
+            
 
             <div class="flex justify-center items-center w-full md:w-1/2 px-4 mt-4 md:mt-0">
                 <img class="w-2/5 rounded-md" src="/my website/Images/IMG1.jpg" alt="header image">
             </div>
         </div>
-        <section id="Product">
+        </section>
+        <section id="Services">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-10">
             <!--card 1-->
             <div class="flex flex-col items-center gap-6 px-6 py-5 bg-orange-500 rounded-3xl shadow-main hover:bg-black transitin duration-300">
@@ -78,7 +83,7 @@
                 </div>
         </div>
         </section>
-
+        <section id="contact">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 mb-10 mt-20 justify-between w-full">
             <div class="bg-orange-500 rounded-md p-4">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Contact Number</h2>
@@ -98,6 +103,7 @@
                 <p class="text-lg font-bold text-black">1234 Elm Street, Hometown, Country</p>
             </div>
         </div>
+        </section>
     </div>
 </body>
 </html>
