--- a/my website/Aiden Website.html
+++ b/my website/Aiden Website.html
@@ -82,6 +82,9 @@
                     <p class="font-bold text-dark-grey-700">Debugging is the process of identifying, analyzing, and resolving errors or bugs in software code. It involves using various tools and techniques to detect issues, understand their causes, and implement solutions. The goal of debugging is to ensure that the software runs smoothly, efficiently, and without errors. Effective debugging improves the stability and performance of applications, enhances user experience, and reduces downtime. By meticulously addressing and fixing issues, debugging plays a critical role in software development and maintenance.</p>
                 </div>
         </div>
+        </section id="Projects">
+        <section>
+
         </section>
         <section id="contact">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 mb-10 mt-20 justify-between w-full">
