--- a/my website/Projects.html
+++ b/my website/Projects.html
@@ -29,8 +29,8 @@
 
 
 <section id="Projects" class="mt-20">
-    <h2 class="text-4xl font-extrabold text-center text-white mb-10">My Projects</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 px-4">
+    <h2 class="text-4xl font-extrabold text-center text-black mb-10">My Projects</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-8 px-4">
         
         <!-- Project 1 Card -->
         <div class="bg-orange-500 rounded-lg shadow-lg p-6 hover:bg-white transition duration-300">
@@ -41,7 +41,7 @@
         
         <!-- Project 2 Card -->
         <div class="bg-orange-500 rounded-lg shadow-lg p-6 hover:bg-white transition duration-300">
-            <h3 class="text-2xl font-bold text-dark-grey-900 mb-3">Project Title 2</h3>
+            <h3 class="text-2xl font-bold text-dark-grey-900 mb-3">house-sitting/h3>
             <p class="text-dark-grey-700 font-medium mb-4">A house-sitting booking platform enabling users to schedule services, submit reviews, and view admin-managed data. Built with HTML, CSS, JavaScript, and Node.js.</p>
             <a href="https://github.com/Aiden-Williams19/house-sit" class="text-black font-semibold hover:text-clifford">View Project &rarr;</a>
         </div>
