--- a/my website/Aiden Website.html
+++ b/my website/Aiden Website.html
@@ -100,7 +100,7 @@
             <div class="bg-orange-500 rounded-md p-4">
                 <h2 class="text-2xl font-extrabold text-dark-grey-900">Address</h2>
                 <p class="text-base leading-7 text-dark-grey-600">Find me at</p>
-                <p class="text-lg font-bold text-black">1234 Elm Street, Hometown, Country</p>
+                <p class="text-lg font-bold text-black">10th Ave Kensington</p>
             </div>
         </div>
         </section>
